--- a/contact.html
+++ b/contact.html
@@ -31,47 +31,34 @@
 </header>
 
 <main class="content">
-  <section>
-    <h2>Contact Us</h2>
+  
+Copy code
+Html
+<section>
+  <h2>Contact Us</h2>
 
-    <p>
-      We would love to hear from you.  
-      Whether you want to support our work, collaborate, or learn more about
-      The New Beginning, feel free to reach out.
-    </p>
+  <div class="contact-list">
+    <div class="contact-item">
+      <strong>Phone:</strong>
+      <span>+237 677 441 880</span>
+    </div>
 
-    <h3>Contact Details</h3>
-    <p>
-      📧 Email: <strong>ndongson2001@yahoo.com</strong><br>
-      Phone: <strong>+237677441880</strong><br>
-      📍 Location: Cameroon
-    </p>
+    <div class="contact-item">
+      <strong>Email:</strong>
+      <span>thenewbeginning@example.com</span>
+    </div>
 
-    <h3>Send Us a Message</h3>
+    <div class="contact-item">
+      <strong>WhatsApp:</strong>
+      <span>+237 677 441 880</span>
+    </div>
 
-    <!-- SIMPLE CONTACT FORM (static for now) -->
-    <form action="https://formspree.io/f/mojagaob" method="POST">
-
-  <label>
-    Your Name:
-    <input type="text" name="name" required>
-  </label>
-
-  <label>
-    Your Email:
-    <input type="email" name="email" required>
-  </label>
-
-  <label>
-    Your Message:
-    <textarea name="message" required></textarea>
-  </label>
-
-  <button type="submit">Send Message</button>
-
-</form>
-
-  </section>
+    <div class="contact-item">
+      <strong>Location:</strong>
+      <span>Cameroon</span>
+    </div>
+  </div>
+</section>
 </main>
 
 <footer class="site-footer">
