--- a/contact.html
+++ b/contact.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Contact | The New Beginning</title>
+  <meta charset="UTF-8">
+  <title>Contact | The New Beginning</title>
 
-    <!-- Mobile responsiveness -->
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- Mobile responsiveness -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <!-- Google Font -->
-    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&display=swap" rel="stylesheet">
+  <!-- Google Font -->
+  <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&display=swap" rel="stylesheet">
 
-    <!-- Main stylesheet -->
-    <link rel="stylesheet" href="css/style.css">
+  <!-- Main stylesheet -->
+  <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
@@ -32,7 +32,6 @@
 
 <main class="content">
   <section>
-
     <h2>Contact Us</h2>
 
     <!-- CONTACT DETAILS -->
@@ -44,7 +43,7 @@
 
       <div class="contact-item">
         <strong>Email:</strong>
-        <span>thenewbeginning@example.com</span>
+        <span>ndongson2001@yahoo.com</span>
       </div>
 
       <div class="contact-item">
@@ -68,10 +67,30 @@
       <div style="display:flex; flex-direction:column; gap:15px;">
 
         <label>
+          <strong>Your Name</strong><br>
+          <input
+            type="text"
+            name="name"
+            required
+            style="width:100%; padding:10px; margin-top:5px;"
+          >
+        </label>
+
+        <label>
           <strong>Your Email</strong><br>
           <input
             type="email"
             name="email"
+            required
+            style="width:100%; padding:10px; margin-top:5px;"
+          >
+        </label>
+
+        <label>
+          <strong>Subject</strong><br>
+          <input
+            type="text"
+            name="subject"
             required
             style="width:100%; padding:10px; margin-top:5px;"
           >
