--- a/index.html
+++ b/index.html
@@ -1,51 +1,43 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>The New Beginning</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="css/style.css">
-</head>
-
-<body>
-
-<header class="site-header">
-  <img
-    src="images/logo.png"
-    alt="The New Beginning Logo"
-    style="max-width:140px; margin-bottom:15px;"
-  >
-
-  <h1>The New Beginning</h1>
-
-  <p>
-    Human Rights Education and Community Development Through
-    Bitcoin and Digital Access
-  </p>
-
-  <nav class="site-nav">
-    <a href="index.html">Home</a>
-    <a href="about.html">About</a>
-    <a href="projects.html">Projects</a>
-    <a href="gallery.html">Gallery</a>
-    <a href="donate.html">Donate</a>
-    <a href="contact.html">Contact</a>
-  </nav>
-</header>
-
-<main class="content">
-  <section>
-    <h2>Welcome</h2>
-    <p>
-      The New Beginning is an initiative focused on education,
-      empowerment, and positive change in our communities.
-    </p>
-  </section>
-</main>
-
-<footer class="site-footer">
-  <p>© 2025 The New Beginning. All rights reserved.</p>
-</footer>
-
-</body>
-</html>
+<!DOCTYPE html>  
+<html lang="en">  
+<head>  
+  <meta charset="UTF-8">  
+  <title>The New Beginning</title>  
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">  
+  <link rel="stylesheet" href="css/style.css">  
+</head>  
+  
+<body>  
+  
+<header class="site-header">  
+  <img src="images/image3.jpg" alt="The New Beginning Logo" class="site-logo">  
+  
+  <h1>The New Beginning</h1>  
+  <p>Human Rights Education and Community Development Through Bitcoin and Digital Access</p>  
+  
+  <nav class="site-nav">  
+    <a href="index.html">Home</a>  
+    <a href="about.html">About</a>  
+    <a href="projects.html">Projects</a>  
+    <a href="gallery.html">Gallery</a>  
+    <a href="donate.html">Donate</a>  
+    <a href="contact.html">Contact</a>  
+  </nav>  
+</header>  
+  
+<main class="content">  
+  <section>  
+    <h2>Welcome</h2>  
+    <p>  
+      The New Beginning is an initiative focused on education,  
+      empowerment, and positive change in our communities.  
+    </p>  
+  </section>  
+</main>  
+  
+<footer class="site-footer">  
+  <p>© 2025 The New Beginning. All rights reserved.</p>  
+</footer>  
+  
+</body>  
+</html>  
