--- a/donate.html
+++ b/donate.html
@@ -37,10 +37,67 @@
   <section>
     <h2>Support Our Work with Bitcoin</h2>
 
+    <h2>Support Community Development Through Bitcoin</h2>
+
     <p>
-      Your Bitcoin donation helps us expand access to education, empower
-      communities, and create opportunities for positive social change.
+      Your support enables <strong>The New Beginning</strong> to expand human rights
+      education, improve digital access, and empower communities through innovative
+      and transparent tools.
     </p>
+
+    <h3>Why Your Support Matters</h3>
+
+    <p>
+      Many communities face barriers to education, digital access, and financial
+      inclusion. Your contribution helps us:
+    </p>
+
+    <ul>
+      <li>Deliver human rights education programs</li>
+      <li>Expand access to digital learning resources</li>
+      <li>Support Bitcoin education for financial inclusion</li>
+      <li>Strengthen community-led initiatives</li>
+    </ul>
+
+    <h3>Why We Use Bitcoin</h3>
+
+    <p>
+      Bitcoin allows us to:
+    </p>
+
+    <ul>
+      <li>Receive support transparently and directly</li>
+      <li>Reduce dependence on restrictive financial systems</li>
+      <li>Enable global solidarity across borders</li>
+      <li>Empower communities with digital financial knowledge</li>
+    </ul>
+
+    <h3>How Your Contribution Is Used</h3>
+
+    <ul>
+      <li>Educational materials and training sessions</li>
+      <li>Digital tools and connectivity support</li>
+      <li>Community workshops and outreach programs</li>
+      <li>Capacity building and local empowerment</li>
+    </ul>
+
+    <h3>Join the Mission</h3>
+
+    <p>
+      By supporting <strong>The New Beginning</strong>, you are investing in:
+    </p>
+
+    <ul>
+      <li>Knowledge and rights awareness</li>
+      <li>Digital inclusion</li>
+      <li>Community resilience and self-determination</li>
+    </ul>
+
+    <p>
+      Every contribution—large or small—helps create a new beginning for communities
+      striving for dignity, access, and opportunity.
+    </p>
+
 
     <!-- BITCOIN DONATION BUTTON -->
     <a
