--- a/donate.html
+++ b/donate.html
@@ -39,7 +39,7 @@
     <h2>Support Community Development Through Bitcoin</h2>
 
     <p>
-      Your support enables <strong>The New Beginning</strong> to expand human rights
+      Your support through Bitcoin, enables <strong>The New Beginning</strong> to expand human rights
       education, improve digital access, and empower communities through innovative
       and transparent tools.
     </p>
